hphp/test/slow/collection_classes/from_keys.php.expectf
object(HH\Vector) (2) {
  [0]=>
  string(1) "a"
  [1]=>
  string(1) "b"
}
object(HH\Vector) (0) {
}

Fatal error: Uncaught exception 'InvalidArgumentException' with message 'Parameter must be a container (array or collection)' in %s/from_keys.php:7
%A
